Bug 1522832 - Fine-grained visibility on impression stats (#4743)
* Bug 1522832 - Fine-grained visibility on impression stats

* Batching individual impression pings

* Replace SpocIntersectionObserver

* Review fixes

--- a/content-src/components/DiscoveryStreamComponents/Hero/_Hero.scss
+++ b/content-src/components/DiscoveryStreamComponents/Hero/_Hero.scss
@@ -2,6 +2,8 @@ $card-header-in-hero-font-size: 14;
 $card-header-in-hero-line-height: 20;
 
 .ds-hero {
+  position: relative;
+
   .img {
     @include image-as-background;
   }
